BetterDiscord/main.css
/* Main | Avatar decorations, square everything, no foreignObject & No scrollbars in certain elements */

:root, .custom-profile-theme, [class*="userPopoutInner_"] {
  /* margin / padding */
  --custom-category-channel-space-before-category: 10px;
  --main-padding: 8px;
  --custom-guild-boosting-sidebar-display-conditional-bottom-margin: 0px;
  /* Width */
  --custom-list-items-list-item-width: 64px;
}


/* Everything square + other important tweaks | Avatar decorations */
foreignObject:not([role="menu"]) {mask: none !important; -webkit-mask: none !important;}
*, ::before, ::after {
  border-radius: 0px !important;
  box-shadow: none !important;
  transition: none !important;
}
img[class*="avatarDecoration_"],
img[src*="https://cdn.discordapp.com/avatar-decoration-presets/"] {display: none;}
/* Hide the scrollbar in WebKit-based browsers (Chrome, Safari) */
#channels::-webkit-scrollbar,
[data-list-id="people"]::-webkit-scrollbar,
[class*="membersWrap_"] *::-webkit-scrollbar,
[class*="chatContent_"] *::-webkit-scrollbar,
[class*="standardSidebarView_"] *::-webkit-scrollbar {display: none;}





/* =========================> Other | Variables <========================= */
/* Change the "Home Icon" to any image you want (Remove the default home icon) */
[class*="listItem_"] [class*="listItemWrapper_"]:has([data-list-item-id="guildsnav___home"]) {
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-image: var(--Home-Image-Icon);
  background-size: 48px 48px;
  background-clip: border-box;
}
[class*="listItem_"] [class*="listItemWrapper_"]:has([data-list-item-id="guildsnav___home"]) [class*="childWrapper_"] {
  display: none !important;
}
/* Titlebar */
#app-mount [class*="titleBar_"] {display: var(--Titlebar);}









/* ===========> Server list | Left bar <========== */
/* Separator below "Read All" & Above top server */
[aria-label="Servers sidebar"]{width: var(--custom-list-items-list-item-width); background: var(--background-primary);}
[data-list-id="guildsnav"] [class*="guildSeparator_"] {display: none;}
.platform-win .scroller_fea3ef {padding-top: var(--main-padding);}
[class*="listItem_"]:first-child {margin-bottom: 0;} /* Direct message/home */
/* "Read All" container makes it look cleaner */
.frame-oXWS21 {margin-bottom: 0px;}
/* Read All button from plugin */
button.vc-ranb-button {
  margin: 0px !important;
  background: var(--background-secondary);
  position: absolute;
  bottom: 2px;
  left: 2px;
  border-right: 1px solid transparent;
  color: #ccc;
  font-size: 12px;
}
/* Removes discover server button on server bar */
[data-list-id="guildsnav"] [class*="listItem_"]:has([aria-label="Explore Discoverable Servers"]) {display: none;}
/* Unread pill */
[data-list-id="guildsnav"] [class*="listItem_"] > [class*="pill_"] > span {background: rgba(var(--accent), .8);}







/* ====> Channel sidebar <==== */
[aria-label="Channels"] li[class*="containerDefault_"][draggable="true"]:has([d="M5.3 9.3a1 1 0 0 1 1.4 0l5.3 5.29 5.3-5.3a1 1 0 1 1 1.4 1.42l-6 6a1 1 0 0 1-1.4 0l-6-6a1 1 0 0 1 0-1.42Z"]) {
  background: var(--background-primary);
  padding: 2px 0;
  text-align: center;
}
[aria-label="Channels"] li[class*="containerDefault_"][draggable="true"] path[d="M5.3 9.3a1 1 0 0 1 1.4 0l5.3 5.29 5.3-5.3a1 1 0 1 1 1.4 1.42l-6 6a1 1 0 0 1-1.4 0l-6-6a1 1 0 0 1 0-1.42Z"] {display: none;} /* Removes arrow on channel header categories */
[aria-label="Channels"] :is(div[style="height: 12px;"], [class*="sectionDivider_"]) {display: none;}
[aria-label="Channels"] [class*="containerWithMargin_"]:has([class*="progressBarContainer_"]) {background: var(--background-primary);}
/* Unread pill */
[aria-label="Channels"] div[class*="containerDefault_"],
[aria-label="Channels"] li[class*="containerDefault_"] [class*="typeVoice_"],
[aria-label="Channels"] li[class*="containerDefault_"] > [class*="wrapper_"]:not([class*="typeThread_"]) {margin-left: 0px;}
[aria-label="Channels"] li[class*="containerDefault_"] > [class*="modeUnreadImportant_"]:not([class*="typeThread_"]) {margin-left: 0px; background: var(--background-tertiary);}
[aria-label="Channels"] [class*="modeUnreadImportant_"]:not([class*="typeThread_"]) [class*="unread_"] {
  background: var(--jump-newmessage-bars-buttons);
  width: 2px;
  left: 0px;
  height: 100%;
  top: 0;
  margin-top: 0;
  z-index: 1;
}
[aria-label="Channels"] [class*="typeThread_"] [class*="unread_"] {background: transparent !important;} /* doesn't apply the thread / support threads */
[aria-label="Channels"] [class*="modeSelected_"] [class*="link_"],
[aria-label="Channels"] [class*="modeSelected_"]:hover [class*="link_"] {background: rgba(var(--accent), .1) !important;} /* Selected + selected hover background color */
/* Selected & hover over channel + left bar ::after */
[aria-label="Channels"] [class*="containerDefault_"]:hover [class*="wrapper_"] a::after,
[aria-label="Channels"] [class*="containerDefault_"][class*="selected_"] [class*="modeSelected_"] a::after {
  display: flex;
  position: absolute;
  z-index: 12;
  content: "";
  width: 2px;
  height: 100%;
  left: 0px;
  top: 0px;
  background: rgba(var(--accent), .5) !important;
}
[aria-label="Channels"] [class*="containerDefault_"]:hover [class*="wrapper_"] a {background: rgba(var(--accent), .1) !important;}
/* ==> User panel | Status <== */
[class*="accountProfilePopoutWrapper_"] :is(.body_ad5fac, .scroller_d90b3d) {padding: 0 !important;}
[class*="accountProfilePopoutWrapper_"] .themeContainer_ad5fac {width: 280px !important;}
[class*="accountProfilePopoutWrapper_"] :is(.wrapper_cb78f1.biteSize_cb78f1, .header_b07019, .username_ad5fac, .menu_ad5fac div[role=separator]) {display: none;}
[class*="accountProfilePopoutWrapper_"] .menus_ad5fac {gap: 0;}





/* ==========> Chat bar <========== */
form[class*="form_"] {
  padding-left: var(--main-padding);
  padding-right: var(--main-padding);
  margin-top: -8px;
}
form [class*="channelTextArea_"], form [class*="channelAppLauncher_"] {margin-bottom: var(--main-padding);}
form [class*="channelAppLauncher_"] {margin-left: var(--main-padding); display: var(--Apps-Chat-Bar-button) !important;}
form [class*="sansAttachButton_"] {padding: 0 var(--main-padding);}
/* Chat bar button removals */
[class*="buttons_"]:not(:hover) [aria-label="Open Translate Modal"],
[aria-label="Open sticker picker"],
[aria-label="Send a gift"] {display: none;}
/* Typing & Slow mode */
form > [class*="typing_"] {top: -24px; background: var(--background-primary);}
form > [class*="typing_"] [class*="ellipsis_"] {margin-left: 0px;}
/* Jump to message + New messages bars */
[class*="messagesWrapper_"] > [class*="newMessagesBar_"] {right: var(--main-padding); left: var(--main-padding); height: 24px;}
[class*="messagesWrapper_"] > [class*="jumpToPresentBar_"] {right: var(--main-padding); left: var(--main-padding); margin-bottom: calc(var(--main-padding) + 24px); padding-bottom: 0;}
/* New message separator */
#---new-messages-bar[role="separator"] {
  top: 1px;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;
}
/* Support / thread post annoying hover transfrom */
[data-list-id*="forum-channel-list-"] > [role="list"] > li[class*="card_"] > [class*="container_"]:hover, .vc-addon-card:hover {transform: translatey(0px) !important;}
/* Shrinks stickers */
[id*="message-accessories-"] [class*="assetWrapper_"] {
  height: 80px !important;
  width: 80px !important;
}
/* Mention / @'ed & Reply border bar */
[class*="messageListItem_"] > [class*="mentioned_"]:before {background: var(--mention-color-bar);}
[class*="messageListItem_"] > [class*="mentioned_"] {background: var(--mention-color-background);}
[class*="messageListItem_"] [class*="mentioned_"] > [class*="repliedMessage_"]:before {border-color: var(--mention-color-bar);}





/* ====> Member list sidebar <==== */
[class*="membersWrap_"] [aria-label="Members"] > [class*="membersGroup_"] {
  background: var(--background-primary);
  padding: 3px 0;
  text-align: center;
  height: auto;
}
[class*="membersWrap_"] [aria-label="Members"] > [class*="member_"][class*="selected_"],
[class*="membersWrap_"] [aria-label="Members"] > [class*="member_"][class*="clickable_"] {margin-left: 0; max-width: 100%;}
[class*="membersWrap_"] [aria-label="Members"] > [class*="member_"][class*="selected_"] > [class*="memberInner_"],
[class*="membersWrap_"] [aria-label="Members"] > [class*="member_"][class*="clickable_"] > [class*="memberInner_"] {height: 38px;}
/* ==> Toolbar <== */
/* Compact searchbar */
[class*="toolbar_"] > [class*="search_"] {margin: 0;}
[class*="search_"] > [class*="searchBar_"] {width: min-content; background: transparent;}
[class*="search_"][class*="open_"] > [class*="searchBar_"] {width: 200px; background: var(--background-tertiary);}
[class*="search_"] > [class*="searchBar_"] [class*="icon_"] > [class*="iconContainer_"] {transform: scale(1.3) !important;}
[class*="search_"] > [class*="searchBar_"] [class*="icon_"] > [class*="iconContainer_"] svg {color: var(--interactive-normal) !important;}





/* ======> Popout <====== */
.theme-light.custom-theme-background {
  --bg-overlay-color: 255 255 255;
  --bg-overlay-color-inverse: 0 0 0;
  --bg-overlay-opacity-1: 1;
  --bg-overlay-opacity-2: 1;
  --bg-overlay-opacity-3: 1;
  --bg-overlay-opacity-4: 1;
  --bg-overlay-opacity-5: 1;
  --bg-overlay-opacity-6: 1;
  --bg-overlay-opacity-hover: 1;
  --bg-overlay-opacity-hover-inverse: 1;
  --bg-overlay-opacity-active: 1;
  --bg-overlay-opacity-active-inverse: 1;
  --bg-overlay-opacity-selected: 1;
  --bg-overlay-opacity-selected-inverse: 1;
  --bg-overlay-opacity-chat: 1;
  --bg-overlay-opacity-home: 1;
  --bg-overlay-opacity-home-card: 1;
}
.theme-light * {color: black !important;}

/* ===> Compact context menu / Menu list <=== */
[role="menu"] > div:first-child {padding: 0;}
#message > div:first-child [role="menuitem"] {margin: 0;}
#message > div:first-child [role="separator"] {border-color: var(--border-color); margin: 0;}




/* ===================> Settings Page <=================== */
/* ===> Full width fixes <=== */
/* Left Sidebar */
[class*="standardSidebarView_"] [class*="sidebarRegion_"] {max-width: fit-content;} /* 218px without icons? | 248px with icons */
[class*="standardSidebarView_"] [class*="sidebar_"] {padding: 0;}
[class*="standardSidebarView_"] [class*="sidebarRegion_"] [class*="sidebarRegionScroller_"] {justify-content: flex-start;}
/* Right side */
[class*="standardSidebarView_"] [class*="customColumn_c25c6d"], [class*="standardSidebarView_"] [class*="contentColumn_c25c6d"] {
  max-width: 100%;
  min-width: auto;
}
/* => OCD stuff + fixes <= */
[class*="standardSidebarView_"] [class*="side_"] [class*="header_"]:first-child {padding-top: 6px;}
[class*="standardSidebarView_"] [class*="header_"] {background: var(--home-card-resting-border); text-align: center;}
[class*="standardSidebarView_"] [class*="separator_"] {
  margin: 0;
  background: var(--border-color);
}
/* ==> Vencord <== */
.vc-addon-card {background-color: var(--background-modifier-accent);}
.vc-plugins-grid {
  grid-gap: 8px;
  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
}





/* =======> Plugins / Extension only <======= */

/* Message Logger */
.messagelogger-edited {filter: brightness(100%) !important;}
.messagelogger-edited span {color: #f35f5f;}

